@@ -24,6 +24,7 @@ import com.mongodb.client.MongoClient;
 import com.mongodb.client.MongoClients;
 import com.mongodb.client.MongoDatabase;
 import com.mongodb.client.model.IndexOptions;
+import java.io.IOException;
 import java.sql.Time;
 import java.sql.Timestamp;
 import java.text.ParseException;
@@ -69,12 +70,10 @@ import org.polypheny.db.catalog.entity.CatalogDefaultValue;
 import org.polypheny.db.catalog.entity.CatalogIndex;
 import org.polypheny.db.catalog.entity.CatalogPartitionPlacement;
 import org.polypheny.db.catalog.entity.CatalogTable;
-import org.polypheny.db.config.ConfigDocker;
-import org.polypheny.db.config.RuntimeConfig;
+import org.polypheny.db.docker.DockerContainer;
+import org.polypheny.db.docker.DockerContainer.HostAndPort;
 import org.polypheny.db.docker.DockerInstance;
 import org.polypheny.db.docker.DockerManager;
-import org.polypheny.db.docker.DockerManager.Container;
-import org.polypheny.db.docker.DockerManager.ContainerBuilder;
 import org.polypheny.db.prepare.Context;
 import org.polypheny.db.schema.Schema;
 import org.polypheny.db.schema.SchemaPlus;
@@ -102,13 +101,12 @@ public class MongoPlugin extends Plugin {
 
     @Override
     public void start() {
-        Map<String, String> settings = ImmutableMap.copyOf( Map.of(
-                "port", "27017",
+        Map<String, String> settings = ImmutableMap.of(
                 "type", "mongo",
                 "instanceId", "0",
                 "mode", "docker",
                 "trxLifetimeLimit", "1209600"
-        ) );
+        );
 
         Adapter.addAdapter( MongoStore.class, ADAPTER_NAME, settings );
     }
@@ -127,20 +125,18 @@ public class MongoPlugin extends Plugin {
             description = "MongoDB is a document-oriented database system.",
             supportedNamespaceTypes = { NamespaceType.DOCUMENT, NamespaceType.RELATIONAL },
             usedModes = { DeployMode.REMOTE, DeployMode.DOCKER })
-    @AdapterSettingInteger(name = "port", defaultValue = 27017)
+    @AdapterSettingInteger(name = "port", defaultValue = 27017, appliesTo = DeploySetting.REMOTE)
     @AdapterSettingString(name = "host", defaultValue = "localhost", appliesTo = DeploySetting.REMOTE)
     @AdapterSettingInteger(name = "trxLifetimeLimit", defaultValue = 1209600) // two weeks
     public static class MongoStore extends DataStore {
 
 
         private String host;
-        private final int port;
-        private Container container;
+        private int port;
+        private DockerContainer container;
         private transient MongoClient client;
         private final transient TransactionProvider transactionProvider;
         private transient MongoSchema currentSchema;
-        private String currentUrl;
-        private int dockerInstanceId;
 
         @Getter
         private final List<PolyType> unsupportedTypes = ImmutableList.of();
@@ -152,34 +148,69 @@ public class MongoPlugin extends Plugin {
         }
 
 
-        public MongoStore( int adapterId, String uniqueName, Map<String, String> settings ) {
-            super( adapterId, uniqueName, settings, true );
-
-            this.port = Integer.parseInt( settings.get( "port" ) );
+        public MongoStore( int adapterId, String uniqueName, Map<String, String> adapterSettings ) {
+            super( adapterId, uniqueName, adapterSettings, true );
 
             if ( deployMode == DeployMode.DOCKER ) {
-                dockerInstanceId = Integer.parseInt( settings.get( "instanceId" ) );
-                DockerManager.Container container = new ContainerBuilder( getAdapterId(), "polypheny/mongo", getUniqueName(), dockerInstanceId )
-                        .withMappedPort( 27017, port )
-                        .withInitCommands( Arrays.asList( "mongod", "--replSet", "poly" ) )
-                        .withReadyTest( this::testConnection, 20000 )
-                        .withAfterCommands( Arrays.asList( "mongo", "--eval", "rs.initiate()" ) )
-                        .build();
-                this.container = container;
-                DockerManager.getInstance().initialize( container ).start();
-                this.host = container.getIpAddress();
+                if ( settings.getOrDefault( "deploymentId", "" ).equals( "" ) ) {
+                    int instanceId = Integer.parseInt( settings.get( "instanceId" ) );
+                    DockerInstance instance = DockerManager.getInstance().getInstanceById( instanceId )
+                            .orElseThrow( () -> new RuntimeException( "No docker instance with id " + instanceId ) );
+                    try {
+                        this.container = instance.newBuilder( "polypheny/mongo:latest", getUniqueName() )
+                                .withCommand( Arrays.asList( "mongod", "--replSet", "poly" ) )
+                                .createAndStart();
+                    } catch ( IOException e ) {
+                        throw new RuntimeException( e );
+                    }
+
+                    if ( !container.waitTillStarted( this::testConnection, 20000 ) ) {
+                        container.destroy();
+                        throw new RuntimeException( "Failed to start Mongo container" );
+                    }
+
+                    try {
+                        int exitCode = container.execute( Arrays.asList( "mongo", "--eval", "rs.initiate()" ) );
+                        if ( exitCode != 0 ) {
+                            throw new IOException( "Command returned non-zero exit code" );
+                        }
+                    } catch ( IOException e ) {
+                        container.destroy();
+                        throw new RuntimeException( " Command 'mongo --eval rs.initiate()' failed" );
+                    }
+
+                    this.deploymentId = container.getContainerId();
+                    settings.put( "deploymentId", this.deploymentId );
+                    updateSettings( settings );
+                } else {
+                    deploymentId = settings.get( "deploymentId" );
+                    DockerManager.getInstance(); // Make sure docker instances are loaded.  Very hacky, but it works.
+                    container = DockerContainer.getContainerByUUID( deploymentId )
+                            .orElseThrow( () -> new RuntimeException( "Could not find docker container with id " + deploymentId ) );
+                    if ( !testConnection() ) {
+                        throw new RuntimeException( "Could not connect to container" );
+                    }
+                }
+
+                resetDockerConnection();
             } else if ( deployMode == DeployMode.REMOTE ) {
                 this.host = settings.get( "host" );
-            } else if ( deployMode == DeployMode.EMBEDDED ) {
-                throw new RuntimeException( "Unsupported deploy mode: " + deployMode.name() );
+                this.port = Integer.parseInt( settings.get( "port" ) );
+
+                MongoClientSettings mongoSettings = MongoClientSettings
+                        .builder()
+                        .applyToClusterSettings( builder ->
+                                builder.hosts( Collections.singletonList( new ServerAddress( host, port ) ) )
+                        )
+                        .build();
+
+                this.client = MongoClients.create( mongoSettings );
             } else {
                 throw new RuntimeException( "Unknown deploy mode: " + deployMode.name() );
             }
 
             addInformationPhysicalNames();
             enableInformationPage();
-            ConfigDocker c = RuntimeConfig.DOCKER_INSTANCES.getWithId( ConfigDocker.class, dockerInstanceId );
-            resetDockerConnection( c );
 
             this.transactionProvider = new TransactionProvider( this.client );
             MongoDatabase db = this.client.getDatabase( "admin" );
@@ -203,10 +234,13 @@ public class MongoPlugin extends Plugin {
 
 
         @Override
-        public void resetDockerConnection( ConfigDocker c ) {
-            if ( c.id != dockerInstanceId || c.getHost().equals( currentUrl ) ) {
-                return;
-            }
+        public void resetDockerConnection() {
+            DockerContainer c = DockerContainer.getContainerByUUID( deploymentId )
+                    .orElseThrow( () -> new RuntimeException( "Could not find docker container with id " + deploymentId ) );
+
+            HostAndPort hp = container.connectToContainer( 27017 );
+            host = hp.getHost();
+            port = hp.getPort();
 
             MongoClientSettings mongoSettings = MongoClientSettings
                     .builder()
@@ -219,7 +253,6 @@ public class MongoPlugin extends Plugin {
             if ( transactionProvider != null ) {
                 transactionProvider.setClient( client );
             }
-            this.currentUrl = c.getHost();
         }
 
 
@@ -288,7 +321,7 @@ public class MongoPlugin extends Plugin {
 
         @Override
         public void shutdown() {
-            DockerInstance.getInstance().destroyAll( getAdapterId() );
+            DockerContainer.getContainerByUUID( deploymentId ).ifPresent( DockerContainer::destroy );
 
             removeInformationPage();
         }
@@ -602,11 +635,10 @@ public class MongoPlugin extends Plugin {
             if ( container == null ) {
                 return false;
             }
-            container.updateIpAddress();
-            host = container.getIpAddress();
-            if ( host == null ) {
-                return false;
-            }
+
+            HostAndPort hp = container.connectToContainer( 27017 );
+            host = hp.getHost();
+            port = hp.getPort();
 
             try {
                 MongoClientSettings mongoSettings = MongoClientSettings
